--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
   <name>OAuth2 Authorization Server Example</name>
   <properties>
     <java.version>17</java.version>
+    <spring-boot.version>3.5.6</spring-boot.version>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -101,6 +102,13 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>repackage</goal>
+            </goals>
+          </execution>
+        </executions>
         <configuration>
           <excludes>
             <exclude>
