--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
 #        jwt:
 #          issuer-uri: https://auth.swc.iot
   config:
-    import: optional:file:/etc/config/authdb_creds.yml,optional:file:C:/config/authdb_creds.yml
+    import: optional:file:/etc/config/auth-service/authdb_creds.yml,optional:file:C:/config/authdb_creds.yml
   datasource:
     url: jdbc:postgresql://localhost:5432/auth-db
     username: ${db.username}
@@ -36,7 +36,7 @@ spring:
     show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   redis:
-    host: localhost
+    host: ${redis.host:localhost}
     port: 6379
     timeout: 5000ms
     password: ${redis.password}
