--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
   <name>OAuth2 Authorization Server Example</name>
   <properties>
     <java.version>17</java.version>
+    <spring-cloud.version>2025.0.0</spring-cloud.version>
     <spring-boot.version>3.5.6</spring-boot.version>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
@@ -70,7 +71,10 @@
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-oauth2-jose</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+    </dependency>
     <!-- lombok for brevity -->
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -84,6 +88,18 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-dependencies</artifactId>
+        <version>${spring-cloud.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <build>
     <plugins>
