--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,8 @@ spring:
 #      resourceserver:
 #        jwt:
 #          issuer-uri: https://auth.swc.iot
+  application:
+    name: auth-service
   config:
     import: optional:file:/etc/config/auth-service/authdb_creds.yml,optional:file:C:/config/authdb_creds.yml
   datasource:
@@ -36,7 +38,7 @@ spring:
     show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
   redis:
-    host: ${redis.host:localhost}
+    host: localhost #${redis.host:localhost}
     port: 6379
     timeout: 5000ms
     password: ${redis.password}
